--- a/ee-app/package.json
+++ b/ee-app/package.json
@@ -16,19 +16,20 @@
     "@nuxtjs/redirect-module": "^0.3.1",
     "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "vue-supabase": "^2.3.0",
     "core-js": "^3.15.1",
     "dotenv": "^10.0.0",
     "nuxt": "^2.15.7",
     "nuxt-highcharts": "^2.0.4",
     "nuxt-social-meta": "^1.0.0",
+    "postcss": "^8.4.21",
     "v-clipboard": "^2.2.3",
     "vue": "^2.7.8",
-    "vue-cool-lightbox": "^2.7.4",
+    "vue-cool-lightbox": "^2.7.5",
     "vue-gtag": "^1.16.1",
-    "vue-scrollto": "^2.20.0",
     "vue-lazy-hydration": "^2.0.0-beta.4",
-    "vue-server-renderer": "^2.7.8"
+    "vue-scrollto": "^2.20.0",
+    "vue-server-renderer": "^2.7.8",
+    "vue-supabase": "^2.3.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
